removed properties related to overflow, also fixed more issues with the other containers

--- a/src/components/Biudzeto-ispl/EndResult/EndResultBP9.css
+++ b/src/components/Biudzeto-ispl/EndResult/EndResultBP9.css
@@ -26,12 +26,12 @@ body {
 }
 
 .BP9container2 {
-    grid-row: 3/8;
+    grid-row: 3/7;
     grid-column: 1/7;
 }
 
 .BP9container3 {
-    grid-row: 8/13;
+    grid-row: 7/13;
     grid-column: 1/7;
 }
 
