--- a/src/components/Pajamu-ispl/Pajamu-ispl/Pajamu-ispl.css
+++ b/src/components/Pajamu-ispl/Pajamu-ispl/Pajamu-ispl.css
@@ -116,7 +116,7 @@ buttons
     background: white;
     flex-wrap: nowrap;
     border-radius: 10px;
-    padding: 25px 17px;
+    padding: 0px 17px;
     border-radius: 30px;
 }
 
@@ -136,9 +136,6 @@ buttons
     position: relative;
     border-radius: 30px;
     padding: 0 5%;
-}
-.IncomeNewEntry-title {
-    margin-bottom: 35px;
 }
 
 .IncomeNewEntry-input {
